--- a/estilo.css
+++ b/estilo.css
@@ -80,15 +80,15 @@ body{
   justify-content: space-around;
   align-items: center;
   .container-botao{
-    max-width: 20%;
+    max-width: 25%;
     width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     button{
       margin-top: 20px;
-      width: 50px;
-      padding: 10px 8px;
+      width: 80px;
+      padding: 5px;
       text-align: center;
       background-color: green;
       color: #e3e9e2;
@@ -104,7 +104,6 @@ body{
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    border-left: 3px solid black;
     h3{
       margin-bottom: 10px;
     }
